# python-util

./: .gitignore  2016-7-21 plan  README.md  setup.py
ansible/playbook/: Makefile  hosts  lich.yml
arch/dr/: Makefile
arch/dr/markdown/: index.md
arch/hds/: Makefile
arch/hds/markdown/: index.md  project.md  schema.md
arch/hds/template/: pm-template.latex  template.latex
arch/hds/xmind/: HDS.xmind  REST.xmind  RULES.xmind  SCHED.xmind  TASKS.xmind  TODO.xmind  UMP.xmind
arch/markdown/: index.html
arch/remotecopy/: Makefile
arch/remotecopy/markdown/: remotecopy.md
arch/xmind/: 2016 Q3.xmind  2016 Q4.xmind  201610.xmind  LEARN.xmind  PEOPLE.xmind  PY.xmind  REST.xmind  TREE.xmind  products.xmind  python.xmind  work.xmind
arch/zstack/markdown/: index.md
arch/zstack/template/: pm-template.latex
ask/: __init__.py  decorator.py  dict.py  dt.py  exc.py  exception.py  gen.py  io.py  mc.py  net.py  obj.py  objcache.py  object_cache.py  params.py  realpath.py  singleton.py  spider.py  testmode.py  th.py  util.py  web.py
ask/algo/: cn.py  dct.py  ds.py
ask/clss/: obj.py
ask/func/: closure.py  gen.py
ask/gbase/: gbase.py  gbase.yml  gbase_config.json  parse_yml.py
ask/ipy/: hbase.ipy
ask/nas/: Makefile  r.py
ask/qos/: recipe-511490-1.py
ask/right/: __init__.py  a.py  b.py  base.py  exceptions.py
c/calling_lua_from_c/: counter_test.lua  main.c
c/hello/: CMakeLists.txt
c/hello/src/: context.c  hello.c  qsort.c  redis.c  test1.c  valgrind.c
c/learning_lich4/: CMakeLists.txt
c/learning_lich4/include/: license.h  utils.h
c/learning_lich4/src/: .main.c.swp  attr.c  clone.c  copy.c  hierarch.c  license.c  lich.fs.c  lich.inspect.c  lich.license_gen.c  lichbd_utils.c  main.c  md5sum.c  scan.c  test1.c
cmake/lich4/: CMakeLists.txt
cmake/tutorial/: CMakeLists.txt
cmake/tutorial/example1/include/: example1.h
cmake/tutorial/example1/src/: example1.c
cmake/tutorial/example2/include/: example2.h
cmake/tutorial/example2/src/: example2.c
cv/resume/: .gitignore  README.md  resume.tex
cv/resume/description/: company.tex  education.tex  header.tex  others.tex  patent.tex  project.tex  skills.tex  will.tex
doc/: work.md
flaskweb/: hello.py
git/: gitconfig
go/: Makefile  README.md  hello.go
huayun/lich4/: Makefile
huayun/test/: test_cg.sh  test_env.sh  v4clean.sh
hy/: awesome.hy
latex/: Makefile
latex/checklist/: Makefile  content.tex  lich_checklist_2017Q4.tex  main.tex
latex/cmnet/: Makefile  ceph.tex  enterprise.tex  main.tex  meta.tex  model.tex  snapshot.tex  theory.tex  todo.tex
latex/design/: lich_clock.md  raft.md
latex/develop/: Makefile  arch.tex  checklist.tex  content.tex  data.tex  domain.tex  dr.tex  ec.tex  example.tex  faq.tex  hal.tex  impl.tex  intro.tex  ip.tex  iscsi.tex  library.tex  lich_develop.tex  meta.tex  model.tex  nbd.tex  openstack.tex  problem.tex  process.tex  qos.tex  runtime.tex  snapshot.tex  thin.tex  thread.tex  tier.tex  tool.tex  ump.tex  vmware.tex
latex/develop/code/: du.sh  systemtap.sh
latex/develop/issues/: locator_rpc_lookup.tex
latex/growth/: Makefile  algo.tex  daoism.tex  intro.tex  main.tex  one.tex  principles.tex  strategy.tex  use.tex  yinfu.tex
latex/growth/2017/: 11.tex  12.tex
latex/growth/2018/: 01.tex  02.tex  0201.tex  03.tex  0301.tex  04.tex  0402.tex  06.tex  07.tex  08.tex  09.tex  10.tex  11.tex  12.tex  book.tex
latex/growth/2019/: 01.tex
latex/growth/other/: checklist.tex
latex/growth/tao/: algo.tex  daoism.tex  guanzi.tex  jihe.tex  one.tex  principles.tex  sanhe.tex  self.tex  use.tex  xuanji.tex  xunzi.tex  yijing.tex  yinfu.tex  zhisheng.tex  zhuangzi.tex
latex/hello/: Makefile  hello.tex
latex/lich/: Makefile  bug.tex  cache.tex  cc.tex  ceph.tex  cmnet.tex  consistencygroup.tex  controller.tex  deploy.tex  enterprise.tex  etcd.tex  ext.tex  faq.tex  flow.tex  ft.tex  fusionnas.tex  fusionstor.tex  get_started.tex  hardware.tex  impl.tex  iscsi.tex  main.tex  mapping.tex  meta.tex  model.tex  pool.tex  problem.tex  snapshot.tex  task.tex  test.tex  theory.tex  todo.tex  tool.tex  volume.tex
latex/novices-src/: README  a4paper.jdr  book.jdr  fdl.tex  glsentries.tex  htmlonly.tex  keywords.tex  l2hkeywords.ist  mkexercisehtmls  novices-a4paper.sty  novices-book.sty  novices-book.tex  novices-html.sty  novices-index.ist  novices-main.tex  novices-report.tex  novices-screen.sty  novices-screen.tex  novices.bib  novices.cls  novices.perl  novices.tex  screen.jdr  supplemental.tex
latex/principles/: Makefile
latex/resume/: Makefile  format.cls  resume.tex  run_compile.sh
latex/ssan/: Makefile
latex/suzaku/: Makefile
latex/suzaku-perf/: Makefile
latex/suzaku-ppt/: Makefile
lich/: Makefile  all.py  base.py  config.py  test_cinder.py  test_cluster.py  test_pool.py  test_qos.py  test_read.py  test_snapshot.py  test_token.py  test_user.py  test_volume.py  utils.py
lich/lich/: base.py  cgsnapshot.py  cluster.py  config.py  disk.py  exc.py  license.py  myinspect.py  node.py  pool.py  runner.py  shell.py  snapshot.py  syncump.py  umptypes.py  utils.py  volume.py
lua/: hello.lua  mod.lua  scheduler.lua  test_coroutine.lua
lua/jit/: Makefile  lj.lua  myffi.c  test1.lua
pl/asm/: Makefile  maximum.s
pl/c/calling_lua_from_c/: CMakeLists.txt  counter.lua  counter_test.lua  main.c
pl/cpp/: CMakeLists.txt
pl/cpp/doc/: syntax.md
pl/cpp/include/: hello.h  useless.h
pl/cpp/src/: algo.cc  bit.cc  hello.cc  ldb.cc  list.c  magic.cc  th.cc  useless.cc
pl/go/: Makefile
pl/lua/: hello.lua  test_coroutine_01.lua
project/: 2016Q3.md
script/: add.sh  nokey.sh
snmp/: LICH-MIB2.txt  Makefile  TRAP-TEST-MIB.txt  test.pl
snmp/centos/: install.sh
snmp/etc/: snmpd.conf  snmptrapd.conf
snmp/mibs/: LICH-MIB.txt  NOTIFICATION-TEST-MIB.txt
snmp/traphandle/: test.sh
spider/gdc/: create_index.py  pholcus.cfg  setting.py  test.py  update_resource.py  updateacfun.py  updatebili.py
stock/: tjts.py
stock/etc/: tjts.yml
stock/lib/: prettytable.py  tjts.py  tjts_network.py
test/: all.py
yistor/: CMakeLists.txt
(+430 files in other folders)
